[package]
name = "dumber"
description = "A CLI tool to (un)number sections and add/remove toc(s) of a Markdown document"
version = "4.0.0"
edition = "2024"
rust-version = "1.96.0"
authors = ["Michel Boucey <michel.boucey@gmail.com>"]
license = "BSD-3-Clause"
homepage = "https://github.com/MichelBoucey/dumber"
repository = "https://github.com/MichelBoucey/dumber"
readme = "ReadMe.md"
keywords = ["cli", "markdown", "numbering", "section", "table of content"]
categories = ["development-tools"]
exclude = [".github/*", ".gitignore", "aur/*", "target/*", "test/*", "Makefile", "example.md"]

[dependencies]
regex = "1.12.4"
clap = { version = "4.6.1", features = ["derive"] }
